--- a/src/components/ui/Button2/style.module.scss
+++ b/src/components/ui/Button2/style.module.scss
@@ -34,9 +34,19 @@
     background-color: #cccccc;
     color: #666666;
 
+    @include dark-mode {
+      background-color: #cccccc;
+      color: #666666;
+    }
+
     &:hover {
       background-color: #cccccc;
       color: #666666;
+
+      @include dark-mode {
+        background-color: #cccccc;
+        color: #666666;
+      }
     }
   }
 }
