--- a/src/components/ui/Button/style.module.scss
+++ b/src/components/ui/Button/style.module.scss
@@ -13,18 +13,20 @@
   @include button-size;
   @include button-variant;
 
-  position: relative;
-  display: flex;
-  font-size: 1rem;
-  line-height: 1.5;
-  font-weight: 500;
-  border: 1px solid transparent;
-  border-radius: 0.5em;
-  text-decoration: none;
-  transition:
-    transform 0.3s ease,
-    background-color 0.3s ease,
-    color 0.3s ease;
+  & {
+    position: relative;
+    display: flex;
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 500;
+    border: 1px solid transparent;
+    border-radius: 0.5em;
+    text-decoration: none;
+    transition:
+      transform 0.3s ease,
+      background-color 0.3s ease,
+      color 0.3s ease;
+  }
 
   @media (hover: hover) {
     &:hover {
